Very frequent "WARNING: '!scrollbar', file widget/Theme.cpp:1103" in logs
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox116 | --- | fixed |
People
(Reporter: mccr8, Assigned: emilio)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Looking at a recent Linux64 debug run, this is one of the 5 most common sources of warning spam, with 175,940 instances:
WARNING: '!scrollbar', file widget/Theme.cpp:1103
Like the other widget warning issue I filed, it appears to happen very frequently in a limited number of tests.
In one log I looked at, this warning happened a total of 74 times, but only in two different tests:
dom/indexedDB/test/test_third_party.html
toolkit/components/passwordmgr/test/mochitest/test_submit_without_field_modifications.html
Searching across all of the logs from this run, the log where this happened the most was debug-web-platform-tests-swr-nofis-13_wpt13, where the warning occurred a little over 7000 times. Judging by the extremely purple bar when I try searching for it in the log, most of these are occurring in the test:
/fetch/api/response/response-static-redirect.any.worker.html
It looks like this warning was added in bug 1764435.
Emilio, is this warning worth keeping around or is there something we can do to reduce the frequency? Thanks.
| Assignee | ||
Comment 1•2 years ago
|
||
This is actually a bug that causes a rendering issue on macOS.
| Assignee | ||
Comment 2•2 years ago
|
||
The scrollcorner isn't a child of a scrollbar so we don't find it.
Instead, check for the scrollable node. This info is only used on macOS,
this fixes the rendering of rtl scrollcorners with non-overlay
scrollbars, e.g.:
<div style="border: 1px solid; width: 100%; height: 100%; overflow: scroll; direction: rtl"></div>
Or so.
Updated•2 years ago
|
Comment 4•2 years ago
|
||
| bugherder | ||
Description
•